Fixed navigation display issue on small.

--- a/src/assets/scss/custom/_navigation.scss
+++ b/src/assets/scss/custom/_navigation.scss
@@ -135,6 +135,24 @@
     }
 }
 
+.title-bar  {
+    
+    @include breakpoint(small) {
+        display: flex;
+        width: 225px;
+    }
+    
+    @include breakpoint(medium) {
+        display: flex;
+    }
+    
+    @include breakpoint(large) {
+        display: flex;
+    }
+   
+
+}
+
 
 
 
